[package]
name = "rust_stock_analysis"
version = "0.1.1"
edition = "2021"
description = "The Rust Stock Analysis Library is a Rust-based package designed to provide functionalities for retrieving stock data, calculating technical indicators, visualizing trends, and generating reports."
license = "MIT"

[dependencies]
reqwest = { version = "0.12.2", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
